technical-tasks/1/mtls-demo/templates/mtls-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: iversion
spec:
  mtls:
    mode: STRICT
