technical-tasks/1/mtls-demo/templates/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: mtls-destination-rule
spec:
  host: "*.iversion.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
